fixing bug where screen on mobile is not responding to scrolling

--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ font-family: 'Titillium Web', sans-serif; */
 body {
   margin: 0%;
   font-family: 'Titillium Web', sans-serif;
-  overflow: hidden;
-
 }
 /* Properties for Light and Dark Mode */
 /* ----------------------------------- */
